Bug 61459 - UI: Function wizard buttons icons broken
Summary: UI: Function wizard buttons icons broken
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.1.0.0.alpha0+ Master
Hardware: Other Linux (All)
: high normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.1.0
Keywords: needsDevEval, regression
Depends on:
Blocks: Icon-Themes mab4.1
  Show dependency treegraph
 
Reported: 2013-02-25 19:41 UTC by Ruslan Kabatsayev
Modified: 2017-07-31 23:42 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (76.12 KB, image/png)
2013-02-25 19:41 UTC, Ruslan Kabatsayev
Details
screen copy of master (234.95 KB, image/png)
2013-02-27 05:34 UTC, Jean-Baptiste Faure
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ruslan Kabatsayev 2013-02-25 19:41:37 UTC
Created attachment 75529 [details]
Screenshot

See screenshot.
To reproduce, start Calc, look at function wizard buttons.
This reproduces in Version 4.1.0.0.alpha0+ (Build ID: 5e5b7e431edc837b2be32d03fcbb1e32377e935), but doesn't in Version 4.1.0.0.alpha0+ (Build ID: 5cd036c0742f8be8d6fc34f7e3a983cae557d94)
Comment 1 Jorendc 2013-02-25 22:28:17 UTC
Can't confirm this using Mac OSX 10.8.2 and LibreOffice Version 4.1.0.0.alpha0+ (Build ID: 80f57172833ec720a2bc0d7d9c8f82f8bc5fc70)
TinderBox: MacOSX-Intel@1-built_no-moz_on_10.6.8, Branch:master, Time: 2013-02-24_11:53:07

Therefore I change platform from 'all' to 'linux' (according your screenshot I guess you're using Linux :-) ).

Kind regards,
Joren
Comment 2 Joel Madero 2013-02-26 03:19:50 UTC
Version 4.1.0.0.alpha0+ (Build ID: b8e0455f201198b1deb8f8ca0181e6c9cadc335)
Bodhi Linux 2.2

+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

Also cannot confirm so marking as WFM. 

@Ruslan - two things to try:

Reset your profile as you're running an alpha which maybe borked your profile.

Choose another icon set to see if that does anything (tools -> View)

If this is still an issue please reopen the bug and we'll work through it. Thanks!
Comment 3 Ruslan Kabatsayev 2013-02-26 06:55:53 UTC
I did try to reset the profile, and it didn't fix this. Also, having reset it, I got Crystal icon theme by default, which also had this problem. I've now checked all the themes and no one of them makes those icons work (and High Contrast makes them just high contrast, but still looking like "broken pictures").
Comment 4 Jean-Baptiste Faure 2013-02-27 05:34:51 UTC
Created attachment 75617 [details]
screen copy of master

I can confirm the problem on my own build of master : Version 4.1.0.0.alpha0+ (Build ID: 40421ffc4ea119943fca8acbc1760c280e1140c) under Ubuntu 12.04 x86-64. The bug is more general, it also affects the navigator, Styles and Formatting and partially the menu bar for some icon set (Tango testing, New icon).
I have the save problem with the English UI.

Best regards. JBF
Comment 5 Joel Madero 2013-02-27 05:51:13 UTC
Setting as NEW & prioritizing off of the last comment.

Trivial - Highest

Trivial - doesn't prevent high quality work or affect professional work at all

Highest - regression + reflects poorly on LibreOffice

regression

bibisectrequest (I can't do it since I don't see the issue)

ProposedEasyHack
Comment 6 Jean-Baptiste Faure 2013-02-27 19:35:58 UTC
(In reply to comment #5)
> Setting as NEW & prioritizing off of the last comment.
> 
> Trivial - Highest
> 
> Trivial - doesn't prevent high quality work or affect professional work at
> all

I do not agree: it is impossible to work with the navigator when all icons are identical. I saw this problem because I always have the navigator open. Ok, it's only an alpha version and I do not use it for other things than QA tests. But, please, do not forget to fix this bug. ;-)

Best regards. JBF
Comment 7 Joel Madero 2013-02-27 19:38:22 UTC
yes yes, you sold me that this is not trivial! My mistake
Comment 8 Eike Rathke (retired, only occasionally showing up) 2013-02-28 23:46:06 UTC
Other icons affected:
In Calc:
Format->Cells->Alignment Reference edge icons.
Format->Cells->Borders Line arrangement Default and Shadow style Position icons.

Changing component to UI as this seems to be a more general problem.
Comment 9 Joel Madero 2013-02-28 23:58:22 UTC
I really wish I knew why I wasn't seeing this issue as I'm running Linux build, building again right now to see if I see it then
Comment 10 Jean-Baptiste Faure 2013-03-01 05:20:30 UTC
(In reply to comment #9)
> I really wish I knew why I wasn't seeing this issue as I'm running Linux
> build, building again right now to see if I see it then

Hi Joel, the bug is recent, it works there: Version 4.1.0.0.alpha0+ (Build ID: 3901964b6d1fb2117cb983a7eedf80da93ba553), that is the appeared after 02/24.

Best regards. JBF
Comment 11 Jean-Baptiste Faure 2013-03-01 08:26:19 UTC
(In reply to comment #10)
> (In reply to comment #9)
> > I really wish I knew why I wasn't seeing this issue as I'm running Linux
> > build, building again right now to see if I see it then
> 
> Hi Joel, the bug is recent, it works there: Version 4.1.0.0.alpha0+ (Build
> ID: 3901964b6d1fb2117cb983a7eedf80da93ba553), that is the appeared after
> 02/24.

Does not work there: Version 4.1.0.0.alpha0+ (Build ID: c68c99ec8cedd51d24b5c946a02b56f63df9ce4)
commit: Revert inadvertent change
author: Stephan Bergmann
date: 2013-02-25 12:45:58

30 commits between both. Manual bisection in progress.

Best regards. JBF
Comment 12 Jean-Baptiste Faure 2013-03-01 16:13:04 UTC
Ok, the problem is this commit: 76b3e61bb4ac66decd7800ef309f3241e77d538
title: loplugin: unused variables
author: Thomas Arnhold
date: 2013-02-25 05:41:44

It works until the preceding commit:7cbeac07d21413443889e6ee777a428782e746ae
title: Remove useless SfxStringEncode and SfxStringDecode
author: Thomas Arnhold
date: 2013-02-25 04:16:08

I am not able to say what change in commit 76b3e61bb4ac66decd7800ef309f3241e77d538 is the cause of the icons loss.

Best regards. JBF
Comment 13 Caolán McNamara 2013-03-01 16:41:51 UTC
great, I see it.
Comment 14 Not Assigned 2013-03-01 16:43:39 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a228c580c3107e6dae447fbae3bca544144a5c0b

Resolves: fdo#61459 icons loaded from .res broken



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Jorendc 2013-03-01 17:20:01 UTC
delete bibisectrequest from whiteboard
Comment 16 Jean-Baptiste Faure 2013-03-01 20:37:17 UTC
Verified in Version 4.1.0.0.alpha0+ (Build ID: 74e40fbbbdb0b09f6529a26984f942a3d4b788b)
Thank you for the fix.

Best regards. JBF
Comment 17 Robinson Tryon (qubit) 2015-12-18 10:18:39 UTC Comment hidden (obsolete)