Resolves: fdo#61459 icons loaded from .res broken

regression since 76b3e61bb4ac66decd7800ef309f3241e77d538f

Change-Id: Idfc7789b402aba0d6ab41875a9efc3b990173af0