vcl/source/gdi/image.cxx
@@ -347,6 +347,7 @@ ImageList::ImageList( const ResId& rResId ) :
         pResMgr->Increment( sizeof( RSHEADER_TYPE ) );
 
         sal_uLong                               nObjMask = pResMgr->ReadLong();
+        pResMgr->ReadString(); //skip string
         ::boost::scoped_ptr< Color >        spMaskColor;
 
         if( nObjMask & RSC_IMAGE_MASKCOLOR )
